--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mr.Sirom Wongwiriyakit</title>
+    <link href="https://fonts.googleapis.com/css?family=Itim|Kanit|Pridi|Prompt" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="profile-pic">
+        <img class="img-circle" src="img/img3.jpg" alt="">            
+    </div>
+    <h1 class="content">ศิโรมณ์ วงษ์วิริยะกิจ</h1>
     
 </body>
 </html>
