--- a/index.html
+++ b/index.html
@@ -6,14 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mr.Sirom Wongwiriyakit</title>
     <link href="https://fonts.googleapis.com/css?family=Itim|Kanit|Pridi|Prompt" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="index.css">    
 </head>
 <body>
+    <div class="row">
     <div class="profile-pic">
         <img class="img-circle" src="img/img3.jpg" alt="">            
     </div>
-    <h1 class="content">ศิโรมณ์ วงษ์วิริยะกิจ</h1>
-    
+    </div>
+    <div class="row">
+        <h1>ศิโรมณ์ วงษ์วิริยะกิจ</h1>
+    </div>
+    <div class="row">
+            <p class="col-sm-12">I'm student SoftwareEngineering</p>
+            <p class="col-sm-12">At Prince of Songkla University, Phuket Campus</p>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="profile-pic">
+                <img class="img-thumbnail" alt="Cinque Terre" width="304" height="236" src="img/img0.jpg" >
+                <p class="card"></p>
+            </div>
+        </div>
+        <div class="col-sm-4">
+                <div class="profile-pic">
+                    <img class="img-thumbnail" alt="Cinque Terre" width="304" height="236" src="img/img0.jpg">
+                    <p class="card"></p>
+                </div>
+        </div>
+        <div class="col-sm-4">
+                <div class="profile-pic">
+                    <img class="img-thumbnail" alt="Cinque Terre" width="304" height="236" src="img/img0.jpg" >
+                    <p class="card"></p>
+                </div>
+        </div>
+    </div>
 </body>
 </html>
