--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mr.Sirom Wongwiriyakit</title>
-    <link href="https://fonts.googleapis.com/css?family=Itim|Kanit|Pridi|Prompt" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">    
+    <link href="https://fonts.googleapis.com/css?family=Itim|Kanit|Pridi|Prompt" rel="stylesheet">    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="index.css">    
 </head>
 <body>
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+            <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google" aria-hidden="true"></i></a></li>
+                  </ul>
+    </nav>
     <div class="row">
     <div class="profile-pic">
         <img class="img-circle" src="img/img3.jpg" alt="">            
@@ -27,19 +36,19 @@
         <div class="col-sm-4">
             <div class="profile-pic">
                 <img class="img-thumbnail" alt="Cinque Terre" width="304" height="236" src="img/img0.jpg" >
-                <p class="card"></p>
+                <p class="card">I'm student SoftwareEngineering At Prince of Songkla University, Phuket Campus</p>
             </div>
         </div>
         <div class="col-sm-4">
                 <div class="profile-pic">
                     <img class="img-thumbnail" alt="Cinque Terre" width="304" height="236" src="img/img0.jpg">
-                    <p class="card"></p>
+                    <p class="card">I'm student SoftwareEngineering At Prince of Songkla University, Phuket Campus</p>
                 </div>
         </div>
         <div class="col-sm-4">
                 <div class="profile-pic">
                     <img class="img-thumbnail" alt="Cinque Terre" width="304" height="236" src="img/img0.jpg" >
-                    <p class="card"></p>
+                    <p class="card">I'm student SoftwareEngineering At Prince of Songkla University, Phuket Campus</p>
                 </div>
         </div>
     </div>
